refactor: jdbc.properties添加前缀，不然有的机器会被系统的username覆盖。获取详情用缓存，利用分布式锁。

--- a/pom.xml
+++ b/pom.xml
@@ -158,5 +158,15 @@
 
   <build>
     <finalName>seckill</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
