--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/seckill?useUnicode=true&characterEncoding=utf-8
-username=root
-password=xiaxunwu1996.
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/seckill?useUnicode=true&characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=123123
 
